# fediverse-stats

./: Dockerfile  Procfile  app.py  heroku.yml  pyproject.toml  utils.py
static/css/: main.css
static/js/: main.js
templates/: index.html
