[tool.poetry]
name = "fediverse-stats"
version = "0.1.0"
description = ""
authors = ["Jeong Arm"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
beautifulsoup4 = "*"
Flask = "^2.0.1"
gunicorn = "^20.1.0"
konlpy = "^0.5.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
